// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
<div>
  <h1>
    Add
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Date
      </span>
      <input
        name="date"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        type="datetime-local"
        value=""
      />
    </label>
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Amount
      </span>
      <input
        name="amount"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        step="any"
        type="number"
        value=""
      />
    </label>
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Description
      </span>
      <textarea
        name="description"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        value=""
      />
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
<div>
  <h1>
    Edit
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Date
      </span>
      <input
        name="date"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        type="datetime-local"
        value=""
      />
    </label>
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Amount
      </span>
      <input
        name="amount"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        step="any"
        type="number"
        value=""
      />
    </label>
    <label
      className="form-group form-group--vertical"
    >
      <span
        className="form-group-label-text"
      >
        Description
      </span>
      <textarea
        name="description"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        value=""
      />
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
